<resources>
    <string name="version_name">1.0.5</string>
    <string name="app_name">Pintact</string>
    <string name="unknown_error">Unknown Error</string>
    <string name="facebook_app_id">725659180889061</string>
    <string name="pintact_server_url">https://staging-2046413205.us-east-1.elb.amazonaws.com</string>
    <string name="pintact_chat_server">openfire.pintact.com</string>
    <string name="pintact_group_chat_server">conference.chat.pintact.com</string>
    <string name="TITLE_CONNECT">CONNECT</string>
    <string name="TITLE_ADD_CONTACT_MANUALLY">ADD MANUALLY</string>
    <string name="CONNECT_SEARCH_CONTACT">Search for Contact</string>
    <string name="CONNECT_SEARCH_GROUP_PIN">Search for Group PIN</string>
    <string name="CONNECT_ADD_CONTACT_MANUALLY">Add Contact Manually</string>
    <string name="CONNECT_ADD_CONTACT">ADD CONTACT</string>
    <string name="LABEL_CONTACT_INFO">CONTACT INFO</string>
    <string name="NAME">Name</string>
    <string name="FIRST_NAME">First Name</string>
    <string name="MIDDLE_INITIAL">Middle Initial</string>
    <string name="LAST_NAME">Last Name</string>
    <string name="EMAIL">Email</string>
    <string name="MOBILE">Mobile</string>
    <string name="PHONE">Phone</string>
    <string name="PASSWORD">Password</string>
    <string name="TITLE">Title</string>
    <string name="ORGANIZATION">Organization</string>
    <string name="COMPANY">Company</string>
    <string name="ADDRESS">Address</string>
    <string name="ADDRESS_STREET">Street Address</string>
    <string name="ADDRESS_CITY">City</string>
    <string name="ADDRESS_STATE">State</string>
    <string name="ADDRESS_ZIP">Zip</string>
    <string name="ADD_CONTACT">Type NAME or PIN to begin searching</string>
    <string name="SIGN_IN">SIGN IN</string>
    <string name="JOIN_PINTACT">JOIN PINTACT</string>
    <string name="BUTTON_LETS_FIND_SOME_PINTACTS">LET\'S FIND SOME</string>
    <string name="PROFILE_SHARED_PROFILES">CURRENTLY SHARED PROFILES</string>
    <string name="PROFILE_SELECT_PROFILES_TO_SHARED">SELECT THE PROFILES TO SHARE</string>
    <string name="PROFILE_SELECTED">Selected:</string>
    <string name="HINT_FIRST_NAME">e.g. Steve</string>
    <string name="HINT_COUNTRY_CODE">+1</string>
    <string name="HINT_MOBILE">123-456-7890</string>
    <string name="HINT_MIDDLE_INITIAL">R</string>
    <string name="HINT_SHORT_MIDDLE_INITIAL">M.I.</string>
    <string name="HINT_LAST_NAME">Smith</string>
    <string name="HINT_EMAIL">steve@gmail.com</string>
    <string name="HINT_TITLE">e.g. CEO</string>
    <string name="HINT_ORGANIZATION">e.g. Pintact</string>
    <string name="HINT_PASSWORD">Password</string>
    <string name="HINT_EMAIL_ADDRESS">EMAIL ADDRESS</string>
    <string name="HINT_PROFILE_ENTER_STREET">STREET ADDRESS</string>
    <string name="HINT_PROFILE_ENTER_CITY">CITY</string>
    <string name="HINT_PROFILE_ENTER_STATE">STATE</string>
    <string name="HINT_PROFILE_ENTER_ZIP">ZIP</string>
    <string name="HINT_PROFILE_ENTER_NOTE">These notes will be visible to your Pintacts</string>
    <string name="HINT_PROFILE_ENTER_PROFILE_NAME">Work, Home, Business etc.</string>
    <string name="HINT_PROFILE_ENTER_EMAIL">ENTER EMAIL</string>
    <string name="HINT_PROFILE_ENTER_PHONE_NUMBER">ENTER PHONE NUMBER</string>
    <string name="HINT_PROFILE_ENTER_SOCIAL">ENTER SOCIAL NETWORK</string>
    <string name="HINT_SEARCH_MY_PINTACTS">SEARCH MY PINTACTS</string>
    <string name="HINT_NO_PINTACTS_YET">You have no Pintacts yet.</string>
    <string name="NOTES">Notes</string>
    <string name="NEXT">NEXT</string>
    <string name="REMOVE">REMOVE</string>
    <string name="REMOVE_IMAGE">REMOVE IMAGE</string>
    <string name="CHANGE_IMAGE">CHANGE IMAGE</string>
    <string name="DELETE">Delete</string>
    <string name="ADD">ADD</string>
    <string name="DONE">Done</string>
    <string name="INVITE">INVITE</string>
    <string name="CONNECT">CONNECT</string>
    <string name="EDIT">edit</string>
    <string name="PERSONAL_NOTES">my notes</string>
    <string name="PERSONAL_NOTES_HINT">(for your eyes only)</string>
    <string name="LABEL_EDIT">edit labels</string>
    <string name="LABEL_AB_TITLE">SELECT NAME</string>
    <string name="LABEL_SEARCH_NO_RESULTS">No Results</string>
    <string name="PIN_PLACEHOLDER">#</string>
    <string name="ERROR_INPUT_INVALID">Invalid Input!</string>
    <string name="ERROR_INPUT_INVALID_PASSWORD">8 characters minimum!</string>
    <string name="DIALOG_MESSAGE_CONTACT_SHARE_UPDATING">Updating Shared Profiles.</string>
    <string name="DIALOG_MESSAGE_PROFILE_SAVE">Editing Profile Please wait.</string>
    <string name="generic_error_dialog_title">Error</string>
    <string name="generic_error_dialog_dismiss">OK</string>
    <string name="DIALOG_TITLE_FIELD_EMPTY">Field Empty</string>
    <string name="DIALOG_MESSAGE_NO_NETWORK">No network connection available</string>
    <string name="DIALOG_MESSAGE_FIELD_EMPTY_LOGIN_FORGOT">Please enter your email</string>
    <string name="DIALOG_MESSAGE_FIELD_EMPTY_LOGIN">Please enter your email and password</string>
    <string name="DIALOG_MESSAGE_PLEASE_WAIT">Please wait...</string>
    <string name="DIALOG_TITLE_SURE">ARE YOU SURE</string>
    <string name="DIALOG_MESSAGE_DELETE_PROFILE">You are about to delete this profile. This operation cannot be undone. Do you still wish to continue?</string>
    <string name="DIALOG_TITLE_INVITED">Invite Accepted</string>
    <string name="DIALOG_MESSAGE_INVITED">You have successfully added a new Pintact.</string>
    <string name="dialog_invite_sent_title">Invite Sent</string>
    <string name="dialog_invite_sent_message">Your invite has been sent.  Pintact will notify you when your invite is accepted.</string>
    <string name="dialog_group_joined_title">Group Joined</string>
    <string name="dialog_group_joined_message">You have successfully joined the group.</string>
    <string name="DIALOG_TITLE_REJECT_INVITE">Confirm Rejection</string>
    <string name="DIALOG_MESSAGE_REJECT_INVITE">Are you sure you want to reject this invitation?</string>
    <string name="DIALOG_TITLE_HIDE_INTRO">Hide?</string>
    <string name="DIALOG_MESSAGE_HIDE_INTRO">Are you sure you want to hide?</string>
    <string name="dialog_fix_errors_message">Indicated errors must be resolved before save can be performed.</string>
    <string name="REGISTER_YOUR_INFO">YOUR INFO</string>
    <string name="REGISTER_BUTTON_ADD_ACCOUNT_IMAGE">ADD ACCOUNT IMAGE</string>
    <string name="REGISTER_SELECT_AN_OPTION">SELECT AN OPTION</string>
    <string name="REGISTER_FACEBOOK_OPTION">FACEBOOK</string>
    <string name="REGISTER_MANUAL_OPTION">Manual</string>
    <string name="REGISTER_TAP_ADD_AN_IMAGE">TAP TO ADD AN IMAGE</string>
    <string name="REGISTER_ADD_AN_IMAGE">ADD AN IMAGE</string>
    <string name="REGISTER_MANUALLY">REGISTER MANUALLY</string>
    <string name="already_a_user">ALREADY A USER?</string>
    <string name="how_pintact_work">HOW PINTACT WORKS</string>
    <string name="nm_invite">INVITES</string>
    <string name="nm_update">UPDATES</string>
    <string name="mark_all_as_read">Mark All As Read</string>
    <string name="lm_add">new label</string>
    <string name="lli_labelname">Enter a new label here</string>
    <string name="lli_delete">DELETE</string>
    <string name="lm_members">MEMBERS</string>
    <string name="lm_topics">THREADS</string>
    <string name="lm_chat">Chat</string>
    <string name="lm_main_instruct">Use LABELS to organize your Pintacts.  You can create, edit, or delete a label.\n\nTap a label to see its members</string>
    <string name="lm_edit_instruct">Use LABELS to organize your Pintacts.  You can create, edit, or delete a label.\n\nTap a label to edit it</string>
    <string name="label_actions_dialog_title">Label Actions</string>
    <string name="label_email_label">Send E-mail to All</string>
    <string name="label_sms_label">Send Text to All</string>
    <string name="gm_msg_top">Use Group PIN to create a digital community with ease.</string>
    <string name="gm_msg">A Group PIN allows you to create a single PIN for a group of people. Anyone who adds that PIN will automatically receive contact invites from everyone in the group.</string>
    <string name="gm_new_pin">New Group PIN</string>
    <string name="gm_new_topic">New Chat Topic</string>
    <string name="thread_name">THREAD NAME</string>
    <string name="start_thread">START THREAD</string>
    <string name="create_new_topic">Create Topic</string>
    <string name="gm_join_pin">Join Group</string>
    <string name="gm_name_hint">Tap to enter Name</string>
    <string name="gm_create">CREATE GROUP</string>
    <string name="gm_edit">UPDATE GROUP</string>
    <string name="gm_cancel">CANCEL</string>
    <string name="gm_pin">GROUP PIN</string>
    <string name="gm_pin_hint">G1476</string>
    <string name="gm_name">GROUP NAME</string>
    <string name="gm_expr">PIN EXPIRATION</string>
    <string name="gm_select_profile">SELECT PROFILES TO SHARE</string>
    <string name="gm_msg_title">PERSONALIZE MESSAGE</string>
    <string name="gm_msg_hint">Join me in the future of Contact Management!</string>
    <string name="gm_preview">PREVIEW SHARE</string>
    <string name="gm_share">SHARE</string>
    <string name="gmn_tab1">Group Created</string>
    <string name="gmn_tab2">Group Joined</string>
    <string name="gil_count">1</string>
    <string name="gil_expdate">Exp</string>
    <string name="group_tour_create">Create Your First Group PIN</string>
    <string name="group_tour_cancel">Not now</string>
    <string name="group_automatic_description">Contact info is automatically inserted into each member\'s address book</string>
    <string name="group_create_confirm_head">CONGRATULATIONS</string>
    <string name="group_create_confirm_subhead">ON CREATING A GROUP PIN</string>
    <string name="group_create_confirm_share_instructions">Tap PIN to share</string>
    <string name="group_create_confirm_message">Your Group PIN can now be used to connect everyone in your group.</string>
    <string name="group_create_confirm_footer">Pintact - The future of contact management.</string>
    <string name="dummy"></string>
    <string name="comm_sms">SMS</string>
    <string name="comm_email">E-Mail</string>
    <string name="no_comm_available_error_message">Selected contact doesn\'t have an email or mobile number stored.  Please add a valid email or mobile number and try again.</string>
    <string name="search_setting_info_text">You are searchable in Pintact by the fields below. Pintacts are always searchable by their exact PIN.</string>
    <string name="search_setting_change_image">CHANGE</string>
    <string name="search_setting_status">SEARCH STATUS</string>
    <string name="set_search_setting_privacy_text">List Me in Search Results</string>
    <string name="set_search_setting_image_text">Add photo for search results</string>
    <string name="set_search_setting_search_field_header">SEARCHABLE FIELDS</string>
    <string name="set_search_setting_search_field_pin">PIN</string>
    <string name="set_search_setting_search_field_fname">First Name</string>
    <string name="set_search_setting_search_field_lname">Last Name</string>
    <string name="set_search_setting_search_field_title">Title</string>
    <string name="set_search_setting_search_field_title_hint">i.e. CEO</string>
    <string name="set_search_setting_search_field_company">Company</string>
    <string name="set_search_setting_search_field_company_hint">i.e. Pintact</string>
    <string name="set_search_setting_search_field_city">City</string>
    <string name="set_search_setting_search_field_city_hint">i.e. New York City</string>
    <string name="set_search_setting_search_field_state">State</string>
    <string name="set_search_setting_search_field_state_hint">i.e. New York</string>
</resources>